--- a/MyWebApp/index.html
+++ b/MyWebApp/index.html
@@ -29,7 +29,7 @@
   <link type="text/css" href="Libraries/Leaflet.markercluster/Markercluster.leaflet/dist/MarkerCluster.Default.css" rel="stylesheet" />
   <link rel="stylesheet" href="JS/noUiSlider/nouislider.css"/>
   <link rel="stylesheet" href="Libraries/Dropdown/multiselect_dropdown_with_checkbox_jquery/js/multiselect/jquery.multiselect.css"/>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="Libraries/Slide Menu/Leaflet.SlideMenu-0.4.1/src/L.Control.SlideMenu.css"/>
   <link rel="stylesheet" href="Libraries/Legend/Leaflet.Legend-1.0.0/src/leaflet.legend.css"/>
 
