--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -95,7 +95,7 @@
 
 <!--Search Bar-->
 <div id="searchbar">
-  <button class="button" id="LangButtEng" onclick="navigateToPage('MongoliaSpecies.html')">English</button>
+  <button class="button" id="LangButtEng" onclick="navigateToPage('index.html')">English</button>
   <button class="button" lang="mn" id="LangButtMong" style="left: 40%">Монгол</button>
   <br>
   <button class="button" id="toggle" style="
