--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -64,7 +64,7 @@
             харуулах юм.
           <br><br>
           Энэ газрын зурганд хөхтөний зүйлүүд, тэдгээрийн тархалт мөн тэдэнд байх
-            паразитуудыг үзүүлсэн ба эдгээр цуглуулгууд нь 1999 оноос эхлээд Монголд
+            паразитуудыг үзүүлсэн ба эдгээр цуглуулгууд нь 1997 оноос эхлээд Монголд
             хийгдсэн хамгийн сүүлийн аялал хүртэл байх болно.
         </p>
       <h3>Бүтээгчид</h3>
@@ -108,9 +108,9 @@
   left: 12.5%;
   margin-top: 5%;
 ">Бүлгүүдийг асаах/унтраах</button>
-  <h3 class="Titles">Хөхтөн амьтдын Сонгогч</h3>
-  <p class="instruction">Газрын зураг дээр хөхтөн амьтдын төрлийг
-    <br> нэмэхийн тулд унадаг цэсийг ашиглана уу</p>
+  <h3 class="Titles">Хөхтөн амьтан сонгох</h3>
+  <p class="instruction">Газрын зураг дээр зүйлийн нэрийг оруулахын <br>
+     тулд унадаг цэсийг ашиглана уу</p>
     <select name="Species[]" multiple id="Species" id="species">
         <optgroup label="Зараа (Mesechinus)">
           <option value="Mesechinus dauuricus">Дагуур зараа</option>
@@ -118,8 +118,8 @@
         <optgroup label="Зараа (Hemiechinus)">
           <option value="Hemiechinus auritus">Дагуур зараа</option>
         </optgroup>
-        <optgroup label="Хашир (Sorex)">
-            <option value="Sorex">Sorex</option>
+        <optgroup label="Атаахайн (Sorex)">
+            <option value="Sorex">Атаахайн</option>
             <option value="Sorex araneus">Хэвдүүн атаахай</option>
             <option value="Sorex caecutiens">Дааган атаахай</option>
             <option value="Sorex daphaenodon">Бэсрэг атаахай</option>
@@ -138,20 +138,20 @@
         <option value="Neomys fodiens">Усч гэрэлзгэнэ</option>
       </optgroup>
       <optgroup label="Багваахай (Vespertilio)">
-        <option value="Vespertilio">Vespertilio</option>
+        <option value="Vespertilio">Багваахай</option>
         <option value="Vespertilio murinus">Буурал сармаахай</option>
       </optgroup>
       <optgroup label="Багваахай (Hypsugo)">
         <option value="Hypsugo alaschanicus">Бор турсаахай</option>
       </optgroup>
       <optgroup label="Багваахай (Cnephaeus)">
-        <option value="Cnephaeus">Cnephaeus</option>
+        <option value="Cnephaeus">Багваахай</option>
         <option value="Cnephaeus gobiensis">Говийн сармаахай</option>
         <option value="Cnephaeus nilssonii">Умарын сармаахай</option>
         <option value="Cnephaeus serotinus">Хожуу сармаахай</option>
       </optgroup>
       <optgroup label="Багваахай (Myotis)">
-        <option value="Myotis">Myotis</option>
+        <option value="Myotis">Багваахай</option>
         <option value="Myotis brandtii">Myotis brandtii</option>
         <option value="Myotis davidii">Хээрийн сахалт багваахай</option>
         <option value="Myotis nattereri">Myotis nattereri</option>
@@ -167,15 +167,15 @@
             <option value="Lepus tolai">Бор туулай</option>
         </optgroup>
         <optgroup label="Огдой (Ochotona)">
-          <option value="Ochotona">Ochotona</option>
+          <option value="Ochotona">Огдой</option>
           <option value="Ochotona alpina">Тагийн огдой</option>
           <option value="Ochotona dauurica">Дагуур огдой</option>
-          <option value="Ochotona hoffmanni">Ochotona hoffmanni</option>
+          <option value="Ochotona hoffmanni">Хэнтийн огдой</option>
           <option value="Ochotona hyperborea">Асганы огдой</option>
           <option value="Ochotona pallasii">Монгол огдой</option>
           </optgroup>
           <optgroup label="Тарвага (Marmota)">
-            <option value="Marmota">Marmota</option>
+            <option value="Marmota">Тарвага</option>
             <option value="Marmota baibacina">Алтайн тарвага</option>
             <option value="Marmota sibirica">Монгол тарвага</option>
           </optgroup>
@@ -213,7 +213,7 @@
             <option value="Alexandromys oeconomus cf.">Мэхээрч оготно cf.</option>
           </optgroup>
           <optgroup label="Оготно (Microtus)">
-            <option value="Microtus">Microtus</option>
+            <option value="Microtus">Оготно</option>
             <option value="Microtus arvalis">Бараан оготно</option>
           </optgroup>
           <optgroup label="Оготно (Lasiopodomys)">
@@ -221,7 +221,7 @@
             <option value="Lasiopodomys mandarinus">Үлийн Бор оготно</option>
           </optgroup>
           <optgroup label="Оготно (Clethrionomys)">
-            <option value="Clethrionomys">Clethrionomys</option>
+            <option value="Clethrionomys">Оготно</option>
             <option value="Clethrionomys rutilus">Ойн улаан оготно</option>
             <option value="Clethrionomys rutilus cf.">Ойн улаан оготно cf.</option>
           </optgroup>
@@ -234,8 +234,9 @@
             <option value="Stenocranius gregalis">Хэргэлзий оготно cf.</option>
           </optgroup>    
         <optgroup label="Оготно (Alticola)">
-            <option value="Alticola">Alticola</option>
+            <option value="Alticola">Оготно</option>
             <option value="Alticola barakshin">Говь-алтайн барагчин</option>
+            <option value="Alticola barakshin cf.">Говь-алтайн барагчин cf.</option>
             <option value="Alticola semicanus">Хадны барагчин</option>
             <option value="Alticola strelzowi">Тавшгар барагчин</option>
             <option value="Alticola tuvinicus cf.">Тува барагчин cf.</option>
@@ -259,23 +260,22 @@
             <option value="Allocricetulus curtatus">Цомч шишүүхэй</option>
         </optgroup>
         <optgroup label="Шишүүхэй (Cricetulus)">
-          <option value="Cricetulus">Cricetulus</option>
+          <option value="Cricetulus">Шишүүхэй</option>
           <option value="Cricetulus barabensis">Хөх шишүүхэй</option>
           <option value="Cricetulus barabensis cf.">Хөх шишүүхэй cf.</option>
           <option value="Cricetulus longicaudatus">Сүүлэрхэг шишүүхэй</option>
           <option value="Cricetulus longicaudatus cf.">Сүүлэрхэг шишүүхэй cf.</option>
-          <option value="Cricetulus sokolovi">Соколоьын шишүүхэй</option>
         </optgroup>
         <optgroup label="Шишүүхэй (Nothocricetulus)">
           <option value="Nothocricetulus migratorius">Бор шишүүхэй</option>
         </optgroup>
         <optgroup label="Шишүүхэй (Phodopus)">
-          <option value="Phodopus">Phodopus</option>
+          <option value="Phodopus">Шишүүхэй</option>
           <option value="Phodopus campbelli">Орог зураг</option>
           <option value="Phodopus roborovskii">Элсний зусаг</option>
         </optgroup>
         <optgroup label="Чичүүл (Meriones)">
-          <option value="Meriones">Meriones</option>
+          <option value="Meriones">Чичүүл</option>
           <option value="Meriones meridianus">Шар чичүүл</option>
           <option value="Meriones tamariscinus">Сухайн чичүүл</option>
           <option value="Meriones unguiculatus">Монгол чичүүл</option>
@@ -284,20 +284,20 @@
           <option value="Rhombomys opimus">Морин чичүүл</option>
         </optgroup>
         <optgroup label="Хулгана (Apodemus)">
-            <option value="Apodemus">Apodemus</option>
+            <option value="Apodemus">Хулгана</option>
             <option value="Apodemus agrarius">Хээрийн хулгана</option>
             <option value="Apodemus peninsulae">Азийн хулгана</option>
             <option value="Apodemus uralensis">Ойн хулгана</option>
         </optgroup>
         <optgroup label="Хулгана (Mus)">
-          <option value="Mus">Mus</option>
+          <option value="Mus">Хулгана</option>
           <option value="Mus musculus">Гэрийн хулгана</option>
         </optgroup>
         <optgroup label="Харх (Rattus)">
           <option value="Rattus norvegicus">Бор харх</option>
         </optgroup>
         <optgroup label="Үсэрч Буй Хулгана (Orientallactaga)">
-          <option value="Orientallactaga">Orientallactaga</option>
+          <option value="Orientallactaga">Үсэрч Буй Хулгана</option>
           <option value="Orientallactaga balikunica">Өмнөговийн алагдаага</option>
           <option value="Orientallactaga bullata">Говийн алагдаага</option>
           <option value="Orientallactaga sibirica">Сибирь алагдаага</option>
@@ -330,6 +330,9 @@
          <option value="Meles leucurus">Халздай дорго</option>
          <option value="Meles meles">Meles meles</option>
        </optgroup>
+       <optgroup label="Эрээн хүрнэ (Vormela)">
+        <option value="Vormela peregusna">Эрээн хүрнэ</option>
+      </optgroup>
        <optgroup label="Хошуу (Mustela)">
          <option value="Mustela altaica">Хээрийн солонго</option>
          <option value="Mustela erminea">цагаан Үен</option>
@@ -343,13 +346,13 @@
           <option value="Equus hemionus">Монгол хулан</option>
         </optgroup>
         <optgroup label="Буга (Cervus)">
-          <option value="Cervus canadensis">Cervus canadensis</option>
+          <option value="Cervus canadensis">Халиун буга</option>
         </optgroup>
         <optgroup label="Зээр (Gazella)">
           <option value="Gazella subgutturosa">Хар сүүлт зээр</option>
         </optgroup>
         <optgroup label="Ямаа (Capra)">
-          <option value="Capra hircus">Capra hircus</option>
+          <option value="Capra hircus">Гэрийн ямаа</option>
         </optgroup>
         <optgroup label="Хонь (Ovis)">
             <option value="Ovis ammon">Аргаль</option>
@@ -363,9 +366,9 @@
       </optgroup>
     </select>
 <br>
-<h3 class="Titles">Хөхтөн амьтдын <br> хүрээ Сонгогч</h3>
-<p class="instruction">Газрын зураг дээр хөхтөн амьтдын хүрээг 
-    <br> нэмэхийн тулд унадаг цэсийг ашиглана уу</p>
+<h3 class="Titles">Хөхтний тархац <br> нутгийн газрын зураг</h3>
+<p class="instruction">Газрын зураг дээр зүйлийн мужийг нэмэхийн <br>
+   тулд унадаг цэсийг ашиглана уу</p>
   <select name="Range[]" multiple id="range" id="range">
     <optgroup label="Зараа (Hemiechinus)">
       <option value="Hemiechinus auritus">Дагуур зараа</option>
@@ -413,7 +416,6 @@
           <option value="Lepus tolai">Бор туулай</option>
         </optgroup>
         <optgroup label="Огдой (Ochotona)">
-          <option value="Ochotona">Ochotona</option>
           <option value="Ochotona alpina">Тагийн огдой</option>
           <option value="Ochotona dauurica">Дагуур огдой</option>
           <option value="Ochotona hoffmanni">Ochotona hoffmanni</option>
@@ -492,12 +494,12 @@
     <optgroup label="Шишүүхэй (Cricetulus)">
       <option value="Cricetulus barabensis">Хөх шишүүхэй</option>
       <option value="Cricetulus longicaudatus">Сүүлэрхэг шишүүхэй</option>
-      <option value="Cricetulus sokolovi">Соколоьын шишүүхэй</option>
     </optgroup>
     <optgroup label="Шишүүхэй (Nothocricetulus)">
       <option value="Nothocricetulus migratorius">Бор шишүүхэй</option>
     </optgroup>
     <optgroup label="Шишүүхэй (Phodopus)">
+        <option value="Phodopus">Шишүүхэй</option>
         <option value="Phodopus campbelli">Орог зураг</option>
         <option value="Phodopus roborovskii">Элсний зусаг</option>
     </optgroup>
@@ -521,7 +523,6 @@
       <option value="Rattus norvegicus">Бор харх</option>
     </optgroup>
     <optgroup label="Үсэрч Буй Хулгана (Orientallactaga)">
-        <option value="Orientallactaga">Orientallactaga</option>
         <option value="Orientallactaga balikunica">Өмнөговийн алагдаага</option>
         <option value="Orientallactaga bullata">Говийн алагдаага</option>
         <option value="Orientallactaga sibirica">Сибирь алагдаага</option>
@@ -552,7 +553,7 @@
     </optgroup>
     <optgroup label="Дорго (Meles)">
      <option value="Meles leucurus">Халздай дорго</option>
-     <option value="Meles meles">Meles meles</option>
+     <option value="Meles meles">Дорго</option>
    </optgroup>
    <optgroup label="Хошуу (Mustela)">
      <option value="Mustela altaica">Хээрийн солонго</option>
@@ -566,7 +567,7 @@
       <option value="Equus hemionus">Монгол хулан</option>
     </optgroup>
     <optgroup label="Буга (Cervus)">
-      <option value="Cervus canadensis">Cervus canadensis</option>
+      <option value="Cervus canadensis">Халиун буга</option>
     </optgroup>
   <optgroup label="Зээр (Gazella)">
     <option value="Gazella subgutturosa">Хар сүүлт зээр</option>
@@ -579,35 +580,42 @@
 </optgroup>
   </select>
   <br>
-<h3 class="Titles">Эктопаразит Сонгогч</h3>
-<p class="instruction">Эктопаразитуудыг газрын зураг дээр нэмэхийн <br>
-    тулд унадаг цэсийг ашиглана уу</p>
+
+  <button class="button" id="Include">Include Parasites</button>
+
+  <button class="button" id="Exclude">Exclude Parasites</button>
+
+  <br>
+<h3 class="Titles">Эктопаразит Сонгох</h3>
+<p class="instruction">Газрын зураг дээр эктопаразитын зүйлийн нэрийг <br>
+  оруулахын тулд унадаг цэсийг ашиглана уу</p>
   <select name="Parasites[]" multiple id="Ectoparasites" id="Ectoparasites">
     <optgroup label="Эктопаразит">
-      <option value="Yes">Тодорхойгүй</option>
-      <option value="Arthropoda">Артроподууд</option>
-        <optgroup label="Flies">
-          <option value="Diptera">Яадаа</option>
+      <option value="Yes">Тодорхойлоогүй</option>
+      <option value="Arthropoda">Үе хөлтний хүрээ</option>
+        <optgroup label="Ялаа">
+          <option value="Diptera">Хос далавчтаны баг</option>
         </optgroup>
-        <optgroup label="Ticks and Mites">
-          <option value="Acari">Acari</option>
-          <option value="Ixodida">Ixodida</option>
+        <optgroup label="Хачиг ба Аалз хэлбэрийн хачиг">
+          <option value="Acari">Аалз хэлбэртний дэд анги</option>
+          <option value="Ixodida">Хатуу хачигийн баг</option>
         </optgroup>
-        <optgroup label="Fleas">
-          <option value="Siphonaptera">Бүүрэг</option>
+        <optgroup label="Бүүрэг">
+          <option value="Siphonaptera">Бүүргийн баг</option>
         </optgroup>
-        <optgroup label="Lice">
-          <option value="Phthiraptera">Бөөс</option>
+        <optgroup label="Бөөс">
+          <option value="Psocodea">Тодорхойлоогүй Бөөс</option>
+          <option value="Phthiraptera">Цус сорогч бөөсийн баг</option>
         </optgroup>
     </optgroup>
     </select>
     <br>
-    <h3 class="Titles">Эндопаразит Сонгогч</h3>
-<p class="instruction">Газрын зураг дээр эндопаразит нэмэхийн <br>
-    тулд унадаг цэсийг ашиглана уу</p>
+    <h3 class="Titles">Эндопаразит Сонгох</h3>
+<p class="instruction">Газрын зураг дээр эндопаразитын зүйлийн нэрийг <br>
+   оруулахын тулд унадаг цэсийг ашиглана уу</p>
   <select name="Parasites[]" multiple id="Endoparasites" id="Endoparasites">
     <optgroup label="Эндопаразит">
-          <option value="Yes">Тодорхойгүй</option>
+          <option value="Yes">Тодорхойлоогүй</option>
         </optgroup>
     <optgroup label="Nematodes">
           <option value="Rhabditida">Rhabditida</option>
@@ -634,69 +642,75 @@
     <tr>
         <td>
          <span id="Bovidae"></span>
-         <em>Bovidae</em>
+         <em>Тугалмайтны овог</em>
        </td> 
        <td>
          <span id="Camelidae"></span>
-         <em>Camelidae</em>
+         <em>Тэмээний овог</em>
        </td>
        <td>
        <div id="Canidae"></div>
-         <em>Canidae</em>
+         <em>Нохойн овог</em>
        </td>
        <td>
          <div id="Cervidae"></div>
-         <em>Cervidae</em>
+         <em>Бугын овог</em>
        </td>
        <td>
          <div id="Cricetidae"></div>
-         <em>Cricetidae</em>
+         <em>Шишүүхэйн овог</em>
        </td>
        <td>
          <div id="Dipodidae"></div>
-         <em>Dipodidae</em>
+         <em>Алагдаахайн овог</em>
        </td>
        <td>
          <div id="Equidae"></div>
-         <em>Equidae</em>
+         <em>Адууны овог</em>
        </td>
        <td>
          <div id="Erinaceidae"></div>
-         <em>Erinaceidae</em>
+         <em>Зарааны овог</em>
        </td>
        </tr>
        <tr>
        <td>
          <div id="Gliridae"></div>
-         <em>Gliridae</em>
+         <em>Унтаахайн овог</em>
        </td>
        <td>
          <div id="Leporidae"></div>
-         <em>Leporidae</em>
+         <em>Туулайн овог</em>
        </td>
        <td>
          <div id="Muridae"></div>
-         <em>Muridae</em>
+         <em>Хулганы овог</em>
        </td>
        <td>
          <div id="Mustelidae"></div>
-         <em>Mustelidae</em>
+         <em>Суусрын овог</em>
        </td>
        <td>
          <div id="Ochotonidae"></div>
-         <em>Ochotonidae</em>
+         <em>Огдойн овог</em>
        </td>
        <td>
          <div id="Sciuridae"></div>
-         <em>Sciuridae</em>
+         <em> Хэрэмний овог</em>
        </td>
+       <td>
+        <div id="Soricidae"></div>
+        <em>Атаахайн овог</em>
+      </td>
        <td>
          <div id="Spalacidae"></div>
-         <em>Spalacidae</em>
+         <em>Сохор номингийн овог</em>
        </td>
+       </tr>
+       <tr>
        <td>
          <div id="Vespertilionidae"></div>
-         <em>Vespertilionidae</em>
+         <em>Сармаахайн овог</em>
        </td>
        </tr>
 </table>
@@ -712,7 +726,7 @@
 </body>
 
 
-<script src="Mongoliajson.js"></script>
+<script src="MongoliaLangjson.js"></script>
 
 
 </html>
