--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -4,6 +4,8 @@
   <title>Монгол орны хөхтөн амьтан</title>
 
   <meta charset="UTF-8">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+
   <!--Libraries-->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
