--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -156,7 +156,6 @@
         <option value="Myotis">Багваахай</option>
         <option value="Myotis brandtii">Myotis brandtii</option>
         <option value="Myotis davidii">Хээрийн сахалт багваахай</option>
-        <option value="Myotis nattereri">Myotis nattereri</option>
         <option value="Myotis petax">Дорнодын уссаг багваахай</option>
         <option value="Myotis sibiricus">Myotis sibiricus</option>
         </optgroup>
@@ -405,7 +404,6 @@
       <optgroup label="Багваахай (Myotis)">
         <option value="Myotis brandtii">Myotis brandtii</option>
         <option value="Myotis davidii">Хээрийн сахалт багваахай</option>
-        <option value="Myotis nattereri">Myotis nattereri</option>
         <option value="Myotis petax">Дорнодын уссаг багваахай</option>
         <option value="Myotis sibiricus">Myotis sibiricus</option>
         </optgroup>
@@ -581,12 +579,12 @@
     <option value="Camelus bactrianus">Хавтгай</option>
 </optgroup>
   </select>
-  <br>
 
-  <button class="button" id="Include">Include Parasites</button>
+
+ <!-- <button class="button" id="Include">Include Parasites</button>
 
   <button class="button" id="Exclude">Exclude Parasites</button>
-
+  -->
   <br>
 <h3 class="Titles">Эктопаразит Сонгох</h3>
 <p class="instruction">Газрын зураг дээр эктопаразитын зүйлийн нэрийг <br>
