--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -118,7 +118,7 @@
           <option value="Mesechinus dauuricus">Дагуур зараа</option>
         </optgroup>
         <optgroup label="Зараа (Hemiechinus)">
-          <option value="Hemiechinus auritus">Дагуур зараа</option>
+          <option value="Hemiechinus auritus">Дэлдэн зараа</option>
         </optgroup>
         <optgroup label="Атаахайн (Sorex)">
             <option value="Sorex">Атаахайн</option>
@@ -372,7 +372,7 @@
    тулд унадаг цэсийг ашиглана уу</p>
   <select name="Range[]" multiple id="range" id="range">
     <optgroup label="Зараа (Hemiechinus)">
-      <option value="Hemiechinus auritus">Дагуур зараа</option>
+      <option value="Hemiechinus auritus">Дэлдэн зараа</option>
     </optgroup>
     <optgroup label="Хашир (Sorex)">
       <option value="Sorex araneus">Хэвдүүн атаахай</option>
