--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -31,7 +31,7 @@
   <link type="text/css" href="Libraries/Leaflet.markercluster/Markercluster.leaflet/dist/MarkerCluster.Default.css" rel="stylesheet" />
   <link rel="stylesheet" href="JS/noUiSlider/nouislider.css"/>
   <link rel="stylesheet" href="Libraries/Dropdown/multiselect_dropdown_with_checkbox_jquery/js/multiselect/jquery.multiselect.css"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="Libraries/Slide Menu/Leaflet.SlideMenu-0.4.1/src/L.Control.SlideMenu.css"/>
   <link rel="stylesheet" href="Libraries/Legend/Leaflet.Legend-1.0.0/src/leaflet.legend.css"/>
 
@@ -157,7 +157,7 @@
         <option value="Myotis brandtii">Myotis brandtii</option>
         <option value="Myotis davidii">Хээрийн сахалт багваахай</option>
         <option value="Myotis petax">Дорнодын уссаг багваахай</option>
-        <option value="Myotis sibiricus">Myotis sibiricus</option>
+        <option value="Myotis sibiricus">Сибирийн сахалт багваахай</option>
         </optgroup>
         <optgroup label="Багваахай (Plecotus)">
           <option value="Plecotus kozlovi">Саарал соотон багваахай</option>
@@ -405,7 +405,7 @@
         <option value="Myotis brandtii">Myotis brandtii</option>
         <option value="Myotis davidii">Хээрийн сахалт багваахай</option>
         <option value="Myotis petax">Дорнодын уссаг багваахай</option>
-        <option value="Myotis sibiricus">Myotis sibiricus</option>
+        <option value="Myotis sibiricus">Сибирийн сахалт багваахай</option>
         </optgroup>
         <optgroup label="Багваахай (Plecotus)">
             <option value="Plecotus kozlovi">Саарал соотон багваахай</option>
@@ -418,7 +418,7 @@
         <optgroup label="Огдой (Ochotona)">
           <option value="Ochotona alpina">Тагийн огдой</option>
           <option value="Ochotona dauurica">Дагуур огдой</option>
-          <option value="Ochotona hoffmanni">Ochotona hoffmanni</option>
+          <option value="Ochotona hoffmanni">Хэнтийн огдой</option>
           <option value="Ochotona hyperborea">Асганы огдой</option>
           <option value="Ochotona pallasii">Монгол огдой</option>
           </optgroup>
@@ -617,11 +617,11 @@
     <optgroup label="Эндопаразит">
           <option value="Yes">Тодорхойлоогүй</option>
         </optgroup>
-    <optgroup label="Nematodes">
+    <optgroup label="Дугариг хорхой">
           <option value="Rhabditida">Rhabditida</option>
           <option value="Strongylida">Strongylida</option>
           <option value="Oxyurida">Oxyurida</option>
-        <optgroup label="Cestodes">
+        <optgroup label="Туузан хорхой">
           <option value="Cyclophyllidea">Cyclophyllidea</option>
         </optgroup>
     </optgroup>
