--- a/MyWebApp/MongoliaSpeciesLang.html
+++ b/MyWebApp/MongoliaSpeciesLang.html
@@ -121,7 +121,7 @@
           <option value="Hemiechinus auritus">Дэлдэн зараа</option>
         </optgroup>
         <optgroup label="Атаахайн (Sorex)">
-            <option value="Sorex">Атаахайн</option>
+            <option value="Sorex">Атаахайн (Тодорхойлоогүй)</option>
             <option value="Sorex araneus">Хэвдүүн атаахай</option>
             <option value="Sorex caecutiens">Дааган атаахай</option>
             <option value="Sorex daphaenodon">Бэсрэг атаахай</option>
@@ -140,20 +140,20 @@
         <option value="Neomys fodiens">Усч гэрэлзгэнэ</option>
       </optgroup>
       <optgroup label="Багваахай (Vespertilio)">
-        <option value="Vespertilio">Багваахай</option>
+        <option value="Vespertilio">Багваахай (Тодорхойлоогүй)</option>
         <option value="Vespertilio murinus">Буурал сармаахай</option>
       </optgroup>
       <optgroup label="Багваахай (Hypsugo)">
         <option value="Hypsugo alaschanicus">Бор турсаахай</option>
       </optgroup>
       <optgroup label="Багваахай (Cnephaeus)">
-        <option value="Cnephaeus">Багваахай</option>
+        <option value="Cnephaeus">Багваахай (Тодорхойлоогүй)</option>
         <option value="Cnephaeus gobiensis">Говийн сармаахай</option>
         <option value="Cnephaeus nilssonii">Умарын сармаахай</option>
         <option value="Cnephaeus serotinus">Хожуу сармаахай</option>
       </optgroup>
       <optgroup label="Багваахай (Myotis)">
-        <option value="Myotis">Багваахай</option>
+        <option value="Myotis">Багваахай (Тодорхойлоогүй)</option>
         <option value="Myotis brandtii">Myotis brandtii</option>
         <option value="Myotis davidii">Хээрийн сахалт багваахай</option>
         <option value="Myotis petax">Дорнодын уссаг багваахай</option>
@@ -168,7 +168,7 @@
             <option value="Lepus tolai">Бор туулай</option>
         </optgroup>
         <optgroup label="Огдой (Ochotona)">
-          <option value="Ochotona">Огдой</option>
+          <option value="Ochotona">Огдой (Тодорхойлоогүй)</option>
           <option value="Ochotona alpina">Тагийн огдой</option>
           <option value="Ochotona dauurica">Дагуур огдой</option>
           <option value="Ochotona hoffmanni">Хэнтийн огдой</option>
@@ -176,7 +176,7 @@
           <option value="Ochotona pallasii">Монгол огдой</option>
           </optgroup>
           <optgroup label="Тарвага (Marmota)">
-            <option value="Marmota">Тарвага</option>
+            <option value="Marmota">Тарвага (Тодорхойлоогүй)</option>
             <option value="Marmota baibacina">Алтайн тарвага</option>
             <option value="Marmota sibirica">Монгол тарвага</option>
           </optgroup>
@@ -214,7 +214,7 @@
             <option value="Alexandromys oeconomus cf.">Мэхээрч оготно cf.</option>
           </optgroup>
           <optgroup label="Оготно (Microtus)">
-            <option value="Microtus">Оготно</option>
+            <option value="Microtus">Оготно (Тодорхойлоогүй)</option>
             <option value="Microtus arvalis">Бараан оготно</option>
           </optgroup>
           <optgroup label="Оготно (Lasiopodomys)">
@@ -222,7 +222,7 @@
             <option value="Lasiopodomys mandarinus">Үлийн Бор оготно</option>
           </optgroup>
           <optgroup label="Оготно (Clethrionomys)">
-            <option value="Clethrionomys">Оготно</option>
+            <option value="Clethrionomys">Оготно (Тодорхойлоогүй)</option>
             <option value="Clethrionomys rutilus">Ойн улаан оготно</option>
             <option value="Clethrionomys rutilus cf.">Ойн улаан оготно cf.</option>
           </optgroup>
@@ -235,7 +235,7 @@
             <option value="Stenocranius gregalis">Хэргэлзий оготно cf.</option>
           </optgroup>    
         <optgroup label="Оготно (Alticola)">
-            <option value="Alticola">Оготно</option>
+            <option value="Alticola">Оготно (Тодорхойлоогүй)</option>
             <option value="Alticola barakshin">Говь-алтайн барагчин</option>
             <option value="Alticola barakshin cf.">Говь-алтайн барагчин cf.</option>
             <option value="Alticola semicanus">Хадны барагчин</option>
@@ -261,7 +261,7 @@
             <option value="Allocricetulus curtatus">Цомч шишүүхэй</option>
         </optgroup>
         <optgroup label="Шишүүхэй (Cricetulus)">
-          <option value="Cricetulus">Шишүүхэй</option>
+          <option value="Cricetulus">Шишүүхэй (Тодорхойлоогүй)</option>
           <option value="Cricetulus barabensis">Хөх шишүүхэй</option>
           <option value="Cricetulus barabensis cf.">Хөх шишүүхэй cf.</option>
           <option value="Cricetulus longicaudatus">Сүүлэрхэг шишүүхэй</option>
@@ -271,12 +271,12 @@
           <option value="Nothocricetulus migratorius">Бор шишүүхэй</option>
         </optgroup>
         <optgroup label="Шишүүхэй (Phodopus)">
-          <option value="Phodopus">Шишүүхэй</option>
+          <option value="Phodopus">Шишүүхэй (Тодорхойлоогүй)</option>
           <option value="Phodopus campbelli">Орог зураг</option>
           <option value="Phodopus roborovskii">Элсний зусаг</option>
         </optgroup>
         <optgroup label="Чичүүл (Meriones)">
-          <option value="Meriones">Чичүүл</option>
+          <option value="Meriones">Чичүүл (Тодорхойлоогүй)</option>
           <option value="Meriones meridianus">Шар чичүүл</option>
           <option value="Meriones tamariscinus">Сухайн чичүүл</option>
           <option value="Meriones unguiculatus">Монгол чичүүл</option>
@@ -285,20 +285,20 @@
           <option value="Rhombomys opimus">Морин чичүүл</option>
         </optgroup>
         <optgroup label="Хулгана (Apodemus)">
-            <option value="Apodemus">Хулгана</option>
+            <option value="Apodemus">Хулгана (Тодорхойлоогүй)</option>
             <option value="Apodemus agrarius">Хээрийн хулгана</option>
             <option value="Apodemus peninsulae">Азийн хулгана</option>
             <option value="Apodemus uralensis">Ойн хулгана</option>
         </optgroup>
         <optgroup label="Хулгана (Mus)">
-          <option value="Mus">Хулгана</option>
+          <option value="Mus">Хулгана (Тодорхойлоогүй)</option>
           <option value="Mus musculus">Гэрийн хулгана</option>
         </optgroup>
         <optgroup label="Харх (Rattus)">
           <option value="Rattus norvegicus">Бор харх</option>
         </optgroup>
         <optgroup label="Үсэрч Буй Хулгана (Orientallactaga)">
-          <option value="Orientallactaga">Үсэрч Буй Хулгана</option>
+          <option value="Orientallactaga">Үсэрч Буй Хулгана (Тодорхойлоогүй)</option>
           <option value="Orientallactaga balikunica">Өмнөговийн алагдаага</option>
           <option value="Orientallactaga bullata">Говийн алагдаага</option>
           <option value="Orientallactaga sibirica">Сибирь алагдаага</option>
